2014-03-26  William A. Perkins  <william.perkins@pnnl.gov>

	* test/flow/spur-dike-1: make plots work

	* test/temperature/pond: make plots work

	* test/transport/skew30: update configuration so it runs

2013-02-12  William A. Perkins  <william.perkins@pnnl.gov>

	* test/flow/Rodi/Makefile (NPROC): parallelize test

	* test/flow/180bend/Makefile (MESH): use the finer mesh

2012-11-21  William A. Perkins  <william.perkins@pnnl.gov>

	* test/flow/180bend: parallelize the test and add some pictures

	* test/benchmark/jda/jda-cgns.lay: update 

	* test/benchmark/jda/Makefile (MPIRUN): make parallel

2012-08-08  William A. Perkins  <william.perkins@pnnl.gov>

	* scripts/dewaterred.py (Block.writefld): convert the array to
	floating point before writing it

2012-03-05  William A Perkins  <d3g096@briareus.local>

	* scripts/dewaterred.py: add --begin and --end options to limit
	the time period.

2012-03-01  William A Perkins  <d3g096@briareus.local>

	* scripts/dewaterred.py: only open the CGNS file MODE_MODIFY if
	it's to be bodified

2012-02-29  William A. Perkins  <william.perkins@pnnl.gov>

	* scripts/dewaterred.py: add script to do dewatered and entrapped
	area calculations; use numarray instead of Numeric; 

	* scripts/mass2_setup.py: add a script to set up VisIt to view
	MASS2 output in a nice way

2011-12-19  William A. Perkins  <william.perkins@pnnl.gov>

	* block_grid.f90 (block_gridplot): #ifdef around the actual file
	operations, so block variable reductions can be performed with
	output

	* plot_cgns.f90: #ifdef around the actual file operations, so
	block variable reductions can be performed with output

	* hotstart.f90 (restart_write_var, write_restart): #ifdef around
	the actual file operations, so block variable reductions can be
	performed with output

2011-12-05  William A. Perkins  <william.perkins@pnnl.gov>

	* plot_cgns.f90 (plot_cgns_write): make water surface elevation a
	default output, not diag
