@@ -1,0 +1,41 @@
+mass2 version 0.27 configuration file $Id: mass2_v027.cfg 800 2010-03-26 21:03:24Z d3g096 $
+MASS2 Test Case: Normal Flow
+1			max number of blocks
+2			max number of species
+"grid.dat"
+T			do_flow		! on/off switch for hydrodynamics
+F			do_transport	! on/off switch for transport calculations
+F F "weather.dat"	do_surface_heatx, do_surface_gasx, weather_filename
+F			debug		! extra debug printing
+T			manning		! switch between manning or chezy bottom friction equation
+T	100000  write_restart_file	! write out a binary restart file "restart.bin"
+F			read_hotstart_file	! read in a binary hotstart file "hotstart.bin"
+T			do gage print
+F F			given_initial_wsel	! if TRUE then wsel_or_depth_initial is the initial water elv.; depth if FALSE
+04-01-1996 06:00:00	start date & time
+04-01-1996 07:00:00	end date & time
+2.0			delta_t 	! time step (seconds)
+12 0.1		number_hydro_iterations, max_mass_source_sum	! number of internal iterations at a fixed time level
+2			number_scalar_iterations
+5			scalar_sweep	! internal iterations
+25			depth_sweep
+0.20001 F F 0.7		eddy viscosity
+0.20001 F		kx_diff		! diffusion coeff in xsi (ft^2/sec)
+0.50001 F		ky_diff		! diffusion coeff in eta (ft^2/sec)
+0.03000 F			chezy_con	! manning n value if manning=TRUE
+1.49			mann_con	! constant in the bed shear stress  =1.0 if metric units, 1.49*1.49 for english
+0.15			relax_dp	! relaxation factor for depth corrections
+1.0			relax_uv	! u/v underrelaxation
+UPWIND 0.0 0.0		diff_uv, blend_uv, blend_time	! u/v spatial differing scheme and blending factor, temporal differencing blending factor
+0.2			uvel_initial	! initial uniform value of u velocity
+0.0			vvel_initial	! initial uniform value of v velocity
+25.0		conc_initial	! initial uniform value of concentration						
+5.0		wsel_or_depth_initial	! initial uniform value of depth OR water surface elv.
+0.0			uvel_wind	! uniform value of u wind velocity
+0.0			vvel_wind	! uniform value of v wind velocity
+T 0.005 0.006 0.002            ! do wet/dry, dry depth, rewet depth, zero depth
+0.4 0.0 F 1  bed porosity, initial bed depth, read from initial_bed.dat, bed iterations
+150 F			print_freq  	! printout frequency
+T T F               ! netcdf plot output, ouput flow diag, output flow (in transport only)
+F F T 999999        ! cgns plot output, cell centered, field descriptions, times per file
+1			gage_print_freq
