@@ -1,3 +1,13 @@
+2014-04-03  William A. Perkins  <william.perkins@pnnl.gov>
+
+	* block_initialization.f90 (block_initialization): all entries in
+	a character parameter array must be the same size?
+
+	* mass2_parallel.f90 (banner): make work with PETSc 3.4.4
+
+	* solver_petsc.F90: changes needed to make work with PETSc 3.4.4;
+	not sure if earlier PETSc versions work anymore
+
 2014-03-26  William A. Perkins  <william.perkins@pnnl.gov>
 
 	* test/flow/spur-dike-1: make plots work
